# rusicrs

./: .env  Cargo.toml  build.sh  rusicrs-rpi3b-0.0.1  rusicrs-rpi4-0.0.1
src/: main.rs  types.rs  utils.rs
