[package]
name = "rusicrs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.4", features = ["cors"] }
serde = { version = "1.0.126", features = ["derive"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
dotenvy = "0.15"
rand = "0.8"
serde_json = "1.0"